# Course_2

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: abstract_classes.py  subclasses.py  utils.py
tests/: test_subclasses.py  test_utils.py  test_vacancies2.json
