[tool.poetry]
name = "course-2"
version = "0.1.0"
description = ""
authors = ["Alena <alittlekindness94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.13.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
requests = "^2.32.3"
pandas = "^2.2.3"
magicmock = "^0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
